# tts-ou

./: .gitignore  README.md  converter.py  flake.nix  main.py  optimizer.py  parser.py  pyproject.toml  text_utils.py  tts.py
docs/architecture/: tts-flow.mmd
tests/: test_converter.py  test_optimizer.py  test_parser.py  test_text_utils.py
